<resources>
    <string name="app_name">androidlayoutexercise</string>
    <string name="copyright_2024"><![CDATA[Copyright HGC © 2024]]></string>
    <string name="click_me">Click me!</string>
    <string name="i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes">I’m a passionate coder who enjoys diving into the world of programming. When I’m not behind a screen, I find solace in the pages of a good book or the rhythm of my favorite tunes.</string>
    <string name="hello_my_name_is_hannah_gabrielle_d_caling">Hello, My name is Hannah Gabrielle D. Caling</string>
    <string name="hello_my_name_is_hannah_gabrielle_d_caling2">Hello, My name is Hannah Gabrielle D. Caling</string>
    <string name="i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes2">I’m a passionate coder who enjoys diving into the world of programming. When I’m not behind a screen, I find solace in the pages of a good book or the rhythm of my favorite tunes.</string>
    <string name="click_me2">Click me!</string>
    <string name="copyright_20242">Copyright HGC © 2024</string>
    <string name="hello_my_name_is_hannah_gabrielle_d_caling3">Hello, My name is Hannah Gabrielle D. Caling</string>
    <string name="i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes3">I’m a passionate coder who enjoys diving into the world of programming. When I’m not behind a screen, I find solace in the pages of a good book or the rhythm of my favorite tunes.</string>
    <string name="click_me3">Click me!</string>
    <string name="copyright_20243">Copyright HGC © 2024</string>
    <string name="copyright_hgc_2024">Copyright HGC © 2024</string>
    <string name="click_me4">Click me!</string>
    <string name="i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes4">I’m a passionate coder who enjoys diving into the world of programming. When I’m not behind a screen, I find solace in the pages of a good book or the rhythm of my favorite tunes.</string>
    <string name="hello_my_name_is_hannah_gabrielle_d_caling4">Hello, My name is Hannah Gabrielle D. Caling</string>
</resources>