<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_my_name_is_hannah_gabrielle_d_caling2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes2"
        android:layout_below="@+id/nameTextView"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me2"
        android:layout_below="@+id/descriptionTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_20242"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>