<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f0f0f0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_my_name_is_hannah_gabrielle_d_caling4"
            android:textSize="19sp"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_m_a_passionate_coder_who_enjoys_diving_into_the_world_of_programming_when_i_m_not_behind_a_screen_i_find_solace_in_the_pages_of_a_good_book_or_the_rhythm_of_my_favorite_tunes4"
            android:textSize="18sp"
            android:textColor="#666666"
            android:layout_below="@+id/nameTextView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            tools:ignore="VisualLintLongText" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#009688"
        android:padding="12dp"
        android:text="@string/click_me4"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginTop="8dp"
        android:text="@string/copyright_hgc_2024"
        android:textColor="#546E7A"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

</LinearLayout>